--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 text-white">
-                    <h1 class="display-3 fw-bold mb-4 typing-effect">Selamat Datang di <span class="neon-text">RoboBake</span></h1>
-                    <p class="lead fs-4 mb-4">Toko roti futuristik dibuat Chef Profesional. Roti segar, rasa robotik!</p>
+                    <h1 class="display-3 fw-bold mb-4">
+    <span class="typing-effect">Selamat Datang di </span>
+    <span class="neon-text typing-delay">RoboBake</span>
+</h1>
+                    <p class="lead fs-4 mb-4">Toko roti futuristik dibuat Chef Profesional. Roti segar, rasa istimewa!</p>
                     <a href="https://wa.me/6289514509392" class="btn btn-primary btn-lg pulse-btn">Pesan Sekarang</a>
                 </div>
                 <div class="col-lg-6 text-center">
@@ -63,7 +66,7 @@
 
             <div class="row align-items-center g-5 mb-5">
                 <div class="col-lg-6 text-white">
-                    <h3 class="fs-1 fw-bold text-cyan mb-4">Toko Roti Robot Futuristik</h3>
+                    <h3 class="fs-1 fw-bold text-cyan mb-4">Toko Roti Dengan Teknologi Masa Depan</h3>
                     <p class="fs-5 opacity-95">RoboBake adalah toko roti pertama di Indonesia yang menggunakan teknologi Robot. Setiap roti dibuat dengan presisi tinggi, higienis, dan selalu fresh 24 jam.</p>
                     <ul class="list-unstyled mt-4">
                         <li class="mb-3"><i class="fas fa-robot neon-icon me-3"></i><strong>Robot Baker Otomatis</strong></li>
@@ -108,7 +111,10 @@
                         <div class="product-body">
                             <h5 class="text-white fw-bold mt-3">Roti Coklat Robotik</h5>
                             <p class="price fw-bold fs-3 text-cyan">Rp 15.000</p>
-                            <button class="btn btn-outline-cyan w-100">Beli Sekarang</button>
+                            <button class="btn btn-outline-cyan w-100 buy-now-btn" 
+        data-product="Roti Coklat Robotik">
+    Beli Sekarang
+</button>
 
                         </div>
                     </div>
@@ -121,7 +127,10 @@
                         <div class="product-body">
                             <h5 class="text-white fw-bold mt-3">Roti Coklat Robotik</h5>
                             <p class="price fw-bold fs-3 text-cyan">Rp 15.000</p>
-                            <button class="btn btn-outline-cyan w-100">Beli Sekarang</button>
+                            <button class="btn btn-outline-cyan w-100 buy-now-btn" 
+        data-product="Roti Coklat Robotik">
+    Beli Sekarang
+</button>
                         </div>
                     </div>
                 </div>
@@ -133,7 +142,10 @@
                         <div class="product-body">
                             <h5 class="text-white fw-bold mt-3">Roti Coklat Robotik</h5>
                             <p class="price fw-bold fs-3 text-cyan">Rp 15.000</p>
-                            <button class="btn btn-outline-cyan w-100">Beli Sekarang</button>
+                            <button class="btn btn-outline-cyan w-100 buy-now-btn" 
+        data-product="Roti Coklat Robotik">
+    Beli Sekarang
+</button>
                         </div>
                     </div>
                 </div>
@@ -145,7 +157,10 @@
                         <div class="product-body">
                             <h5 class="text-white fw-bold mt-3">Roti Coklat Robotik</h5>
                             <p class="price fw-bold fs-3 text-cyan">Rp 15.000</p>
-                            <button class="btn btn-outline-cyan w-100">Beli Sekarang</button>
+                            <button class="btn btn-outline-cyan w-100 buy-now-btn" 
+        data-product="Roti Coklat Robotik">
+    Beli Sekarang
+</button>
                         </div>
                     </div>
                 </div>
@@ -157,7 +172,10 @@
                         <div class="product-body">
                             <h5 class="text-white fw-bold mt-3">Roti Coklat Robotik</h5>
                             <p class="price fw-bold fs-3 text-cyan">Rp 15.000</p>
-                            <button class="btn btn-outline-cyan w-100">Beli Sekarang</button>
+                            <button class="btn btn-outline-cyan w-100 buy-now-btn" 
+        data-product="Roti Coklat Robotik">
+    Beli Sekarang
+</button>
                         </div>
                     </div>
                 </div>
@@ -169,7 +187,10 @@
                         <div class="product-body">
                             <h5 class="text-white fw-bold mt-3">Roti Coklat Robotik</h5>
                             <p class="price fw-bold fs-3 text-cyan">Rp 15.000</p>
-                            <button class="btn btn-outline-cyan w-100">Beli Sekarang</button>
+                           <button class="btn btn-outline-cyan w-100 buy-now-btn" 
+        data-product="Roti Coklat Robotik">
+    Beli Sekarang
+</button>
                         </div>
                     </div>
                 </div>
@@ -181,7 +202,10 @@
                         <div class="product-body">
                             <h5 class="text-white fw-bold mt-3">Roti Coklat Robotik</h5>
                             <p class="price fw-bold fs-3 text-cyan">Rp 15.000</p>
-                            <button class="btn btn-outline-cyan w-100">Beli Sekarang</button>
+                            <button class="btn btn-outline-cyan w-100 buy-now-btn" 
+        data-product="Roti Coklat Robotik">
+    Beli Sekarang
+</button>
                         </div>
                     </div>
                 </div>
@@ -193,7 +217,10 @@
                         <div class="product-body">
                             <h5 class="text-white fw-bold mt-3">Roti Coklat Robotik</h5>
                             <p class="price fw-bold fs-3 text-cyan">Rp 15.000</p>
-                            <button class="btn btn-outline-cyan w-100">Beli Sekarang</button>
+                            <button class="btn btn-outline-cyan w-100 buy-now-btn" 
+        data-product="Roti Coklat Robotik">
+    Beli Sekarang
+</button>
                         </div>
                     </div>
                 </div>
@@ -205,7 +232,10 @@
                         <div class="product-body">
                             <h5 class="text-white fw-bold mt-3">Roti Coklat Robotik</h5>
                             <p class="price fw-bold fs-3 text-cyan">Rp 15.000</p>
-                            <button class="btn btn-outline-cyan w-100">Beli Sekarang</button>
+                            <button class="btn btn-outline-cyan w-100 buy-now-btn" 
+        data-product="Roti Coklat Robotik">
+    Beli Sekarang
+</button>
                         </div>
                     </div>
                 </div>
@@ -217,7 +247,10 @@
                         <div class="product-body">
                             <h5 class="text-white fw-bold mt-3">Roti Coklat Robotik</h5>
                             <p class="price fw-bold fs-3 text-cyan">Rp 15.000</p>
-                            <button class="btn btn-outline-cyan w-100">Beli Sekarang</button>
+                            <button class="btn btn-outline-cyan w-100 buy-now-btn" 
+        data-product="Roti Coklat Robotik">
+    Beli Sekarang
+</button>
                         </div>
                     </div>
                 </div>
@@ -229,7 +262,10 @@
                         <div class="product-body">
                             <h5 class="text-white fw-bold mt-3">Roti Coklat Robotik</h5>
                             <p class="price fw-bold fs-3 text-cyan">Rp 15.000</p>
-                            <button class="btn btn-outline-cyan w-100">Beli Sekarang</button>
+                            <button class="btn btn-outline-cyan w-100 buy-now-btn" 
+        data-product="Roti Coklat Robotik">
+    Beli Sekarang
+</button>
                         </div>
                     </div>
                 </div>
@@ -241,7 +277,10 @@
                         <div class="product-body">
                             <h5 class="text-white fw-bold mt-3">Roti Coklat Robotik</h5>
                             <p class="price fw-bold fs-3 text-cyan">Rp 15.000</p>
-                            <button class="btn btn-outline-cyan w-100">Beli Sekarang</button>
+                            <button class="btn btn-outline-cyan w-100 buy-now-btn" 
+        data-product="Roti Coklat Robotik">
+    Beli Sekarang
+</button>
                         </div>
                     </div>
                 </div>
@@ -270,8 +309,22 @@
     </section>
 
     <footer class="bg-dark text-white text-center py-4">
-        <p>© 2025 RoboBake. Rahmat Eka</p>
+        <p>© 2025 RoboBake. <a href="">Universitas Pamulang</a></p>
     </footer>
+
+    <!-- Toast Notification -->
+<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1100;">
+    <div id="orderToast" class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+            <div class="toast-body fw-bold">
+                <i class="fas fa-check-circle me-2"></i>
+                Pesanan <span id="productName">Roti Coklat Robotik</span> berhasil ditambahkan!  
+                Kami akan hubungi via WhatsApp secepatnya.
+            </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+    </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/particles.js"></script>
