--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="website icon" type="png" href="ikon.jpeg" />
+
     
 </head>
 <body>
